@@ -1,10 +1,6 @@
 /
 /bin/
-/bin/java
 /bin/sh
-/bin/gg
-/bin/lmao
-/bin/test
 /dev/
 /dev/null
 /dev/random
